export const snapshot = {};

snapshot[`Milestone List Command - Help Text 1`] = `
stdout:
"
Usage: list --project <project>

Description:

  List milestones for a project

Options:

  -h, --help             - Show this help.                             
  --project   <project>  - Project (UUID, slug ID, or name)  (required)
  -j, --json             - Output as JSON                              

"
stderr:
""
`;

snapshot[`Milestone List Command - With Mock Milestones 1`] = `
stdout:
"NAME                      ID                                   TARGET DATE  PROJECT     
Infrastructure Foundation milestone-1                          2026-01-31   Test Project
Observation Phase         milestone-2                          2026-02-28   Test Project
Safe Enablement           milestone-3                          2026-03-31   Test Project
"
stderr:
""
`;

snapshot[`Milestone List Command - No Milestones Found 1`] = `
stdout:
"No milestones found for this project.
"
stderr:
""
`;

snapshot[`Milestone List Command - JSON Output 1`] = `
stdout:
'{
  "nodes": [
    {
      "targetDate": "2026-01-31",
      "sortOrder": 1,
      "project": {
        "id": "project-123",
        "name": "Test Project"
      },
      "id": "m-first",
      "name": "Kickoff"
    },
    {
      "targetDate": "2026-03-31",
      "sortOrder": 2,
      "project": {
        "id": "project-123",
        "name": "Test Project"
      },
      "id": "m-alpha",
      "name": "Alpha"
    },
    {
      "targetDate": "2026-03-31",
      "sortOrder": 3,
      "project": {
        "id": "project-123",
        "name": "Test Project"
      },
      "id": "m-beta",
      "name": "Beta"
    },
    {
      "targetDate": null,
      "sortOrder": 4,
      "project": {
        "id": "project-123",
        "name": "Test Project"
      },
      "id": "m-undated",
      "name": "Someday"
    }
  ],
  "pageInfo": {
    "hasNextPage": false,
    "endCursor": null
  }
}
'
stderr:
""
`;

snapshot[`Milestone List Command - Empty JSON 1`] = `
stdout:
'{
  "nodes": [],
  "pageInfo": {
    "hasNextPage": false,
    "endCursor": null
  }
}
'
stderr:
""
`;

snapshot[`Milestone List Command - JSON Output With Pagination 1`] = `
stdout:
'{
  "nodes": [
    {
      "targetDate": "2026-01-31",
      "sortOrder": 1,
      "project": {
        "id": "project-123",
        "name": "Test Project"
      },
      "id": "m-1",
      "name": "Sooner"
    },
    {
      "targetDate": "2026-06-30",
      "sortOrder": 1,
      "project": {
        "id": "project-123",
        "name": "Test Project"
      },
      "id": "m-2",
      "name": "Later"
    }
  ],
  "pageInfo": {
    "hasNextPage": false,
    "endCursor": null
  }
}
'
stderr:
""
`;
